copied nginx config and started service in docker-compose.yml;
Signed-off-by: Sahil Shubham <sahil.shubham2000@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,5 +16,11 @@ services:
     image: redis:4-alpine
     volumes:
       - redis_data:/data
+  nginx:
+    image: nginx:alpine
+    restart: unless-stopped
+    ports:
+      - "80:80"
+      - "443:443"
 volumes:
   redis_data:
